syntax = "proto3";

package manga;

message Manga {
    string id = 1;
    string title = 2;
    string description = 3;
  }

  message GetMangaRequest {
    string manga_id = 1;
  }
  
  message GetMangaResponse {
    Manga manga = 1;
  }
  
  message SearchMangaRequest {
    string query = 1;
  }
  
  message SearchMangaResponse {
    repeated Manga manga = 1;
  }
  
  message CreateMangaRequest {
    string manga_id = 1;
    string title = 2;
    string description = 3;
  }
  
  message CreateMangaResponse {
    Manga manga = 1;
  }
  
  service MangaService {
    rpc GetManga(GetMangaRequest) returns (GetMangaResponse);
    rpc SearchManga(SearchMangaRequest) returns (SearchMangaResponse);
    rpc CreateManga(CreateMangaRequest) returns (CreateMangaResponse);
  }






  //Overall, the code defines a service with several RPC methods that allow clients to interact with the Manga service 
  //by making specific requests and receiving corresponding responses. 
  //The exact implementation of these RPC methods will depend on the programming language and framework you choose to generate code 
  //from the Protocol Buffers schema.